--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,16 @@
 <resources>
     <string name="app_name">BitCoin_Converter</string>
-    <string name="currency_label">Currency</string>
-    <string name="bitcoin_label">BTC</string>
-    <string name="ethereum_label">ETH</string>
+    <string name="btc">BTC</string>
+    <string name="dash">DASH</string>
+    <string name="ngn">NGN</string>
+    <string name="menu">MENU</string>
+    <string name="naira">NAIRA</string>
+    <string name="bitcoin">BITCOIN</string>
+    <string name="current_exchange_rate">Current Exchange Rate</string>
+    <string name="exchanged_value">NGN 0.0</string>
+    <string name="rate_to_convert">Enter the amount to convert</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
+    <string name="failed_to_retrieve">Failed to retrieve rate</string>
+    <string name="to">TO</string>
 </resources>
